src/index.css
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
@import "tailwindcss";
@variant dark (&:where(.dark, .dark *));

@theme {
  --color-custom-bg-nav: #373b53;
  --color-custom-bg-card: #f8f8fb;
  --color-custom-bg-white: #e8e8eb;
  --color-custom-accent: #7c5dfa;

  --color-custom-secondary: #888eb0;
  --color-custom-tetiary: #f9fafe;

  --color-custom-border: #494e6e;

  --color-custom-success: #33d69f;
  --color-custom-warning: #ff8f00;
  --color-custom-error: #ec5757;

  --color-custom-text-dark: #0c0e16;
  --color-custom-text-primary: #888eb0;
  --color-custom-text-secondary: #858bb2;
  --color-custom-text-tertiary: #7e88c3;
}

.dark {
  --color-custom-bg-white: #141625;
  --color-custom-bg-card: #1e2139;
  --color-custom-accent: #7c5dfa;
  --color-custom-secondary: #888eb0;
  --color-custom-tetiary: #252945;

  --color-custom-border: #494e6e;

  --color-custom-success: #33d69f;
  --color-custom-warning: #ff8f00;
  --color-custom-error: #ec5757;

  --color-custom-text-dark: #ffffff;
  --color-custom-text-primary: #dfe3fa;
  --color-custom-text-secondary: #ffffff;
  --color-custom-text-tertiary: #888eb0;
}

body {
  font-family: "League Spartan", sans-serif;
  color: var(--color-custom-text-dark);
}
h1 {
  font-size: 24px;
  font-weight: 700;
}
p {
  font-size: 15px;
  font-weight: 700;
}
p.little {
  font-size: 13px;
  font-weight: 500;
}
p.bold {
  font-size: 15px;
  font-weight: 700;
}

.dark .tb {
  background-color: #0c0e16;
}
.dark .card {
  background-color: var(--color-custom-bg-card);
}
.card {
  /* Soft Apple-like shadow */
  box-shadow:
    0px 4px 6px rgba(0, 0, 0, 0.04),
    0px 10px 20px rgba(0, 0, 0, 0.08),
    0px 20px 40px rgba(0, 0, 0, 0.06);
  padding: 24px;
  border-radius: 8px;
}
button {
  cursor: pointer;
}
/* input{
  border: 0;
} */

input:focus,
select:focus {
  border: 1px solid #7c5dfa;
  outline: none;
}

